@@ -1,10 +1,10 @@
-BUSYBOX_TOOLS_VERSION:=1.15.3
+BUSYBOX_TOOLS_VERSION:=1.16.1
+BUSYBOX_TOOLS_SOURCE:=busybox-$(BUSYBOX_TOOLS_VERSION).tar.bz2
+BUSYBOX_TOOLS_SOURCE_MD5:=319486ec65078d07fde26eb620fecde7
 BUSYBOX_TOOLS_MAKE_DIR:=$(TOOLS_DIR)/make
 BUSYBOX_TOOLS_DIR:=$(TOOLS_SOURCE_DIR)/busybox-$(BUSYBOX_TOOLS_VERSION)
 BUSYBOX_TOOLS_BINARY:=$(BUSYBOX_TOOLS_DIR)/busybox
 BUSYBOX_TOOLS_CONFIG_FILE:=$(BUSYBOX_TOOLS_MAKE_DIR)/Config.busybox
-BUSYBOX_TOOLS_SOURCE:=busybox-$(BUSYBOX_TOOLS_VERSION).tar.bz2
-BUSYBOX_TOOLS_SOURCE_MD5:=6059ac9456de6fb18dc8ee4cd0ec9240
 BUSYBOX_TOOLS_SITE:=http://www.busybox.net/downloads
 BUSYBOX_TOOLS_TARGET_DIR:=$(TOOLS_DIR)
 BUSYBOX_TOOLS_TARGET_BINARY:=$(TOOLS_DIR)/busybox
