@@ -123,6 +123,7 @@ Latest changes:
     * xmail 1.26
 
 - Updated tools and hooks:
+    * busybox-tools: Bump to version 1.16.1
     * external: Move external files out of tools/external into separate files for each package
 
 - Updated patches:
